tests/snapshots/ui_smoke__library_page_renders_without_panic.snap
---
source: tests/ui_smoke.rs
expression: frame
---
 F1 Library   F2 Queue   F3 Quick Play   F4 Playlists   F5 Server   F6 Settings 
                                                              ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Artists → Albums · Library: A┐┌ Songs ───────────────────────────────────────┐
│                              ││Select an album to view songs                 │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
┌ Now Playing ─────────────────────────────────────────────────────────────────┐
│                               No track playing                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next │ r:Repeat (off) │ y:Lyrics            
Shift+T:Shuffle library                                                         
n:Star playing │ m:Star selected │ /:Search │ ←/→:Focus │ v:Albums/Artists      
f:Library │ s:Sort │ e:Add │ i:Add next │ t:Shuffle │ Enter:Play
