tests/snapshots/ui_smoke__now_playing_widget_renders_with_a_loaded_track.snap
---
source: tests/ui_smoke.rs
expression: frame
---
 F1 Library  │  F2 Queue  │  F3 Quick Play  │  F4             ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Artists → Albums · Library: A┐┌ Songs ───────────────────────────────────────┐
│                              ││Select an album to view songs                 │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
┌ Now Playing ─────────────────────────────────────────────────────────────────┐
│                                  Test Artist                                 │
│                                  Test Album                                  │
│                                    A Track                                   │
│                                    ♪ 100%                                    │
│00:30 / 03:00  ━━━━━━━━━━──────────────────────────────────────────────────── │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next                                        
n:Star playing │ m:Star selected │ /:Sea
