tests/snapshots/ui_smoke__playlists_page_renders_without_panic.snap
---
source: tests/ui_smoke.rs
expression: frame
---
 F1 Library  │  F2 Queue  │  F3 Quick Play  │  F4             ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Playlists (0) ───────────────┐┌ Songs ───────────────────────────────────────┐
│No playlists found            ││Select a playlist to view songs               │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
│                              ││                                              │
└──────────────────────────────┘└──────────────────────────────────────────────┘
┌ Now Playing ─────────────────────────────────────────────────────────────────┐
│                               No track playing                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next                                        
Enter:Play │ e/i:Queue │ a:→ Playlist │
