tests/snapshots/ui_smoke__server_page_renders_without_panic.snap
---
source: tests/ui_smoke.rs
expression: frame
---
 F1 Library   F2 Queue   F3 Quick Play   F4 Playlists   F5 Server   F6 Settings 
                                                              ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Server Connection ───────────────────────────────────────────────────────────┐
│                                                                              │
│Server URL                                                                    │
│┌──────────────────────────────────────────────────────────┐                  │
││▏                                                         │                  │
│└──────────────────────────────────────────────────────────┘                  │
│Username                                                                      │
│                                                                              │
│                                                                              │
│Password                                                                      │
│┌──────────────────────────────────────────────────────────┐                  │
││                                                          │                  │
│└──────────────────────────────────────────────────────────┘                  │
│                                                                              │
│[ Test Connection ]                                                           │
│[ Save ]                                                                      │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next │ r:Repeat (off) │ y:Lyrics            
Shift+T:Shuffle library │ n:Star playing                                        
Tab:Next field │ Enter:Test/Save │ Ctrl+r:Refresh
