tests/snapshots/ui_smoke__settings_page_renders_without_panic.snap
---
source: tests/ui_smoke.rs
expression: frame
---
 F1 Library   F2 Queue   F3 Quick Play   F4 Playlists   F5 Server   F6 Settings 
                                                              ⏮︎   ⏵︎   ⏸︎   ⏹︎   ⏭︎ 
┌ Settings ────────────────────────────────────────────────────────────────────┐
│Display                                                                       │
│▶ Theme             Default  ◀ ▶                                              │
│                                                                              │
│Now Playing                                                                   │
│  Cava Visualizer   Off (cava not found)                                      │
│  Cava Size         N/A                                                       │
│  Cover Art         Off                                                       │
│  Cover Art Size    16 rows                                                   │
│                                                                              │
│Playback                                                                      │
│  Repeat            Off                                                       │
│  Auto-continue     Off                                                       │
│  Stream on Start   On                                                        │
│  Scrobble          On                                                        │
│                                                                              │
│System                                                                        │
│← → or Enter to change theme (auto-saves)                                     │
└──────────────────────────────────────────────────────────────────────────────┘
q:Quit │ p/Space:Pause │ h:Prev │ l:Next │ r:Repeat (off) │ y:Lyrics            
Shift+T:Shuffle library │ n:Star playing                                        
←/→/Enter:Change
